k3s/monitor/02-deployment.yml
# Prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
        name: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          imagePullPolicy: Always
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          args:
            - '--config.file=/etc/prometheus/prometheus.yml'          
          ports:
            - name: prometheus
              containerPort: 9090
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus
            - name: prometheus-storage
              mountPath: /prometheus/
              subPath: prometheus
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus
        - name: prometheus-storage
          persistentVolumeClaim:
            claimName: monitor-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitor
spec:
  selector:
    app: prometheus
  type: LoadBalancer
  ports:
    - name: prometheus
      port: 9090
      targetPort: 9090

# Alertmanager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
        name: alertmanager
    spec:
      containers:
        - name: alertmanager
          image: prom/alertmanager
          imagePullPolicy: Always
          ports:
            - name: alertmanager
              containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitor
spec:
  selector:
    app: alertmanager
  type: LoadBalancer
  ports:
    - name: alertmanager
      port: 9093
      targetPort: 9093

# Grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
        name: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          imagePullPolicy: Always
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          ports:
            - name: grafana
              containerPort: 3000
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana/
              subPath: grafana
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: monitor-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitor
spec:
  selector:
    app: grafana
  type: LoadBalancer
  ports:
    - name: grafana
      port: 3000
      targetPort: 3000
