k3s/monitor/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor
  namespace: monitor
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - secretName: cert-apcode.com.br
  rules:
    - host: prometheus.apcode.com.br
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus
                port:
                  name: prometheus
    - host: alertmanager.apcode.com.br
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: alertmanager
                port:
                  name: alertmanager
    - host: grafana.apcode.com.br
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  name: grafana
